# MetroFuse

./: README.md  commit-15bf160.diff
.github/workflows/: build.yml  build_pr.yml  build_quick.yml  release.yml
app/: build.gradle.kts
app/schemas/com.metrolist.music.db.InternalDatabase/: 40.json
app/src/debug/res/xml/: shortcuts.xml
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/metrolist/music/: App.kt  MainActivity.kt
app/src/main/kotlin/com/metrolist/music/apple/: AppleMusicCanvasProvider.kt  AppleMusicDecryptPipeline.kt  AppleMusicSongResolver.kt  AppleMusicWrapperDataSource.kt  AppleMusicWrapperManagerProvider.kt
app/src/main/kotlin/com/metrolist/music/constants/: PreferenceKeys.kt
app/src/main/kotlin/com/metrolist/music/db/: MusicDatabase.kt
app/src/main/kotlin/com/metrolist/music/deezer/: DeezerAudioProvider.kt
app/src/main/kotlin/com/metrolist/music/extensions/: MediaItemExt.kt
app/src/main/kotlin/com/metrolist/music/instagram/: InstagramAudioProvider.kt
app/src/main/kotlin/com/metrolist/music/local/: AudioMixMetadataReader.kt  LocalMusicScanner.kt
app/src/main/kotlin/com/metrolist/music/models/: MediaMetadata.kt
app/src/main/kotlin/com/metrolist/music/playback/: DownloadUtil.kt  LiveFlacBitrateDataSource.kt  MusicService.kt  PlayerConnection.kt  PublicDownloadExporter.kt
app/src/main/res/values/: metrolist_strings.xml
app/src/main/res/xml/: shortcuts.xml
gradle/: libs.versions.toml
paxsenix/src/main/kotlin/com/metrolist/paxsenix/: Paxsenix.kt
spotify-native/: Cargo.toml
spotify-native/src/: lib.rs
(+72 files in other folders)
